Tasky Lab 2 - Exercise 1 + 2 Done

--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -84,3 +84,15 @@ form {
   width: 50%;
   margin: auto;
 }
+
+.high {
+ background-color: red;
+}
+
+.medium{
+  background-color: yellow;
+}
+
+.low{
+  background-color: green;
+}
