--- a/tasky/src/App.css
+++ b/tasky/src/App.css
@@ -85,14 +85,6 @@ form {
   margin: auto;
 }
 
-.high {
- background-color: red;
-}
-
-.medium{
-  background-color: yellow;
-}
-
-.low{
-  background-color: green;
+.priority {
+  background-color: black;
 }
